crates/nash-parse/src/expression/snapshots/nash_parse__expression__if___tests__if_else_if_multiline.snap
---
source: crates/nash-parse/src/expression/if_.rs
description: "Code:\n\nif a then\n    1\nelse if b then\n    2\nelse\n    3\n"
---
Located {
    region: Region {
        start: Position {
            line: 1,
            column: 1,
        },
        end: Position {
            line: 6,
            column: 6,
        },
    },
    value: If {
        branches: [
            IfBranch {
                condition: Located {
                    region: Region {
                        start: Position {
                            line: 1,
                            column: 4,
                        },
                        end: Position {
                            line: 1,
                            column: 5,
                        },
                    },
                    value: Var {
                        kind: LowVar,
                        name: "a",
                    },
                },
                then_branch: Located {
                    region: Region {
                        start: Position {
                            line: 2,
                            column: 5,
                        },
                        end: Position {
                            line: 2,
                            column: 6,
                        },
                    },
                    value: Int(
                        1,
                    ),
                },
            },
            IfBranch {
                condition: Located {
                    region: Region {
                        start: Position {
                            line: 3,
                            column: 9,
                        },
                        end: Position {
                            line: 3,
                            column: 10,
                        },
                    },
                    value: Var {
                        kind: LowVar,
                        name: "b",
                    },
                },
                then_branch: Located {
                    region: Region {
                        start: Position {
                            line: 4,
                            column: 5,
                        },
                        end: Position {
                            line: 4,
                            column: 6,
                        },
                    },
                    value: Int(
                        2,
                    ),
                },
            },
        ],
        final_else: Located {
            region: Region {
                start: Position {
                    line: 6,
                    column: 5,
                },
                end: Position {
                    line: 6,
                    column: 6,
                },
            },
            value: Int(
                3,
            ),
        },
    },
}
