crates/nash-parse/src/expression/snapshots/nash_parse__expression__if___tests__if_multiline.snap
---
source: crates/nash-parse/src/expression/if_.rs
description: "Code:\n\nif condition then\n    trueBranch\nelse\n    falseBranch\n"
---
Located {
    region: Region {
        start: Position {
            line: 1,
            column: 1,
        },
        end: Position {
            line: 4,
            column: 16,
        },
    },
    value: If {
        branches: [
            IfBranch {
                condition: Located {
                    region: Region {
                        start: Position {
                            line: 1,
                            column: 4,
                        },
                        end: Position {
                            line: 1,
                            column: 13,
                        },
                    },
                    value: Var {
                        kind: LowVar,
                        name: "condition",
                    },
                },
                then_branch: Located {
                    region: Region {
                        start: Position {
                            line: 2,
                            column: 5,
                        },
                        end: Position {
                            line: 2,
                            column: 15,
                        },
                    },
                    value: Var {
                        kind: LowVar,
                        name: "trueBranch",
                    },
                },
            },
        ],
        final_else: Located {
            region: Region {
                start: Position {
                    line: 4,
                    column: 5,
                },
                end: Position {
                    line: 4,
                    column: 16,
                },
            },
            value: Var {
                kind: LowVar,
                name: "falseBranch",
            },
        },
    },
}
