crates/nash-parse/src/expression/snapshots/nash_parse__expression__if___tests__if_nested_condition.snap
---
source: crates/nash-parse/src/expression/if_.rs
description: "Code:\n\nif f x then 1 else 2"
---
Located {
    region: Region {
        start: Position {
            line: 1,
            column: 1,
        },
        end: Position {
            line: 1,
            column: 21,
        },
    },
    value: If {
        branches: [
            IfBranch {
                condition: Located {
                    region: Region {
                        start: Position {
                            line: 1,
                            column: 4,
                        },
                        end: Position {
                            line: 1,
                            column: 7,
                        },
                    },
                    value: Call {
                        function: Located {
                            region: Region {
                                start: Position {
                                    line: 1,
                                    column: 4,
                                },
                                end: Position {
                                    line: 1,
                                    column: 5,
                                },
                            },
                            value: Var {
                                kind: LowVar,
                                name: "f",
                            },
                        },
                        arguments: [
                            Located {
                                region: Region {
                                    start: Position {
                                        line: 1,
                                        column: 6,
                                    },
                                    end: Position {
                                        line: 1,
                                        column: 7,
                                    },
                                },
                                value: Var {
                                    kind: LowVar,
                                    name: "x",
                                },
                            },
                        ],
                    },
                },
                then_branch: Located {
                    region: Region {
                        start: Position {
                            line: 1,
                            column: 13,
                        },
                        end: Position {
                            line: 1,
                            column: 14,
                        },
                    },
                    value: Int(
                        1,
                    ),
                },
            },
        ],
        final_else: Located {
            region: Region {
                start: Position {
                    line: 1,
                    column: 20,
                },
                end: Position {
                    line: 1,
                    column: 21,
                },
            },
            value: Int(
                2,
            ),
        },
    },
}
