crates/nash-parse/src/expression/snapshots/nash_parse__expression__if___tests__if_simple.snap
---
source: crates/nash-parse/src/expression/if_.rs
description: "Code:\n\nif True then 1 else 2"
---
Located {
    region: Region {
        start: Position {
            line: 1,
            column: 1,
        },
        end: Position {
            line: 1,
            column: 22,
        },
    },
    value: If {
        branches: [
            IfBranch {
                condition: Located {
                    region: Region {
                        start: Position {
                            line: 1,
                            column: 4,
                        },
                        end: Position {
                            line: 1,
                            column: 8,
                        },
                    },
                    value: Var {
                        kind: CapVar,
                        name: "True",
                    },
                },
                then_branch: Located {
                    region: Region {
                        start: Position {
                            line: 1,
                            column: 14,
                        },
                        end: Position {
                            line: 1,
                            column: 15,
                        },
                    },
                    value: Int(
                        1,
                    ),
                },
            },
        ],
        final_else: Located {
            region: Region {
                start: Position {
                    line: 1,
                    column: 21,
                },
                end: Position {
                    line: 1,
                    column: 22,
                },
            },
            value: Int(
                2,
            ),
        },
    },
}
